--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "eslint:fix": "eslint src/**/*.ts --fix",
     "format": "prettier --write 'src/**/*.{js,ts,json}'",
     "lint": "npm-run-all eslint check-types",
-    "lint:fix": "npm run eslint:fix; npm run check-types; npm run format"
+    "fix": "npm run eslint:fix; npm run check-types; npm run format"
   },
   "dependencies": {
     "eslint-config-prettier": "8.3.0",
