--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-prettier": "8.3.0",
     "express": "^4.17.1"
   },
+  "type": "module",
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
