--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "node dist/index.js",
     "tsc": "tsc",
-    "start": "node .",
+    "start": "node dist/index.js",
+    "dev": "nodemon -L",
+    "ts-node": "ts-node",
     "check-types": "tsc --noEmit",
     "eslint": "eslint src/**/*.ts",
     "eslint:fix": "eslint src/**/*.ts --fix",
@@ -24,7 +25,9 @@
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "eslint": "^8.4.1",
+    "nodemon": "^2.0.15",
     "prettier": "2.5.1",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   }
 }
