--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "tsc": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/app.js",
     "dev": "nodemon -L",
     "ts-node": "ts-node",
     "check-types": "tsc --noEmit",
